# admin_bot

./: .gitignore  LICENSE  License  Makefale  Makefile  README.md  TOKEN  Users_base.db  aea_bot.py  aea_bot2.py  config.py  pyproject.toml  requirements.txt  settings.json  start.py
asets/: ai.py  blacklist.json  data_bese.py  dictt.py  ffmpeg_LICENSE.md  ffmpeg_tool.py  set_day_message_time.json  user_bot.py  user_bot_config.json  wiki_api_lib.py
asets/ffmpeg-master-latest-linuxarm64-lgpl/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffmpeg-formats.1  ffplay-all.1  ffprobe-all.1
asets/ffmpeg-master-latest-win64-gpl-shared/include/libavutil/: ffversion.h
asets/ffmpeg-master-latest-win64-gpl-shared/lib/pkgconfig/: libavdevice.pc  libavfilter.pc  libavformat.pc
workflows/: replace_files.yml
